feat: add mock service account api
